Archive/51737e2944fe1e223caed150c3181426-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:2:1: error: 'future' in namespace 'std' does not name a type
 std::future< decltype( fx(args...) ) > Queue ( TFx&& fx, TArgs&&... args ) {
 ^
